# crabtrap

./: Cargo.toml  README.md
src/: config.rs  http.rs  lib.rs  main.rs  server.rs  writer.rs
src/http/: connection.rs  http.rs  mod.rs
src/metadata/: collector.rs  connection.rs  host.rs  mod.rs  request_info.rs  user_agent.rs
src/tarpit/: mod.rs  service.rs
src/util/: content_type.rs  mod.rs
src/writer/: mod.rs  tarpit.rs
