[package]
name = "crabtrap"
version = "0.1.0"
edition = "2021"

[lib]
name = "crabtrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
http-body = "1"
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
rand = "0.8"
tower = "0.4"
tokio-stream = "0.1"
mime = "0.3.17"